--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
 a {
@@ -17,14 +17,53 @@ a {
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
+  /* body {
     color: white;
     background: black;
+  } */
+}
+
+.cm-editor {
+  height: 100%;
+}
+
+@layer components {
+  .card {
+    display: flex;
+    cursor: pointer;
+    height: theme('spacing.24');
+    /* width: theme('spacing.64'); */
+    background-color: theme('colors.white');
+    border-radius: theme('borderRadius.lg');
+    padding: theme('spacing.6') theme('spacing.4');
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 10%),
+      0 8px 10px 3px rgb(0 0 0 / 10%);
+    /* box-shadow: 0px 20px 25px -5px rgb(0 0 0 / 10%), 0 8px 20px 0px rgb(0 0 0 / 10%); */
+    transition: box-shadow 0.25s;
+    font-size: 1.4rem;
+  }
+  .card:hover {
+    box-shadow: 0 25px 30px 3px rgb(0 0 0 / 10%),
+      0 12px 16px 4px rgb(0 0 0 / 10%);
+  }
+  .card svg {
+    width: theme('spacing.8');
+    height: theme('spacing.8');
+  }
+  .tool-list {
+    padding: 1rem;
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+  }
+}
+
+@media print {
+  .no-print,
+  .no-print * {
+    display: none !important;
   }
 }
