--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,7 +114,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .card,
+  /* .card,
   .footer {
     border-color: #222;
   }
@@ -123,5 +123,5 @@
   }
   .logo img {
     filter: invert(1);
-  }
+  } */
 }
